# social-cli

./: CMakeLists.txt  conandata.yml  main.cpp
headers/: interfaces.h
libs/facebook/: Facebook.cpp  Facebook.h
libs/youtube/: CMakeLists.txt  youtube.cpp  youtube.h
